--- a/src/components/AllJobsDetails/index.css
+++ b/src/components/AllJobsDetails/index.css
@@ -1,4 +1,28 @@
-.jobs-page-container {
+.jobs-page {
 	min-height: 100vh;
 	width: 100vw;
+}
+.jobs-page-container {
+	padding-top: 20px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 25px;
+	background-color: #000000;
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+}
+.profile-and-filter-container {
+	min-height: 100%;
+	width: 25vw;
+	background-color: red;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+}
+.profile-container {
+	background-image: url('https://assets.ccbp.in/frontend/react-js/profile-bg.png');
+	background-size: cover;
+	width: 100%;
 }
