--- a/src/components/AllJobsDetails/index.css
+++ b/src/components/AllJobsDetails/index.css
@@ -3,26 +3,119 @@
 	width: 100vw;
 }
 .jobs-page-container {
-	padding-top: 20px;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding-top: 30px;
+	padding-left: 70px;
+	padding-right: 70px;
 	padding-bottom: 25px;
 	background-color: #000000;
 	min-height: 100vh;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
+	column-gap: 50px;
 }
 .profile-and-filter-container {
 	min-height: 100%;
-	width: 25vw;
-	background-color: red;
+	width: 20vw;
+	/* background-color: red; */
 	display: flex;
 	flex-direction: column;
-	padding: 10px;
+	row-gap: 25px;
 }
 .profile-container {
+	width: 100%;
+	height: 100%;
 	background-image: url('https://assets.ccbp.in/frontend/react-js/profile-bg.png');
 	background-size: cover;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	padding: 15px;
+	row-gap: 8px;
+	border-radius: 20px;
+	overflow: hidden;
+}
+.profile-view-container {
+	height: 28vh;
 	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.profile-image {
+	width: 30px;
+}
+.profile-name {
+	font-size: 18px;
+	color: #6366f1;
+}
+.profile-bio {
+	color: #475569;
+}
+.all-jobs-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 65vw;
+	row-gap: 20px;
+}
+.jobs-input-container {
+	border: 1px solid #7e858e;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	align-self: flex-start;
+	column-gap: 15px;
+	background-color: #202020;
+	height: 30px;
+	width: 40%;
+}
+.job-name-input {
+	height: 100%;
+	width: 80%;
+	color: #475569;
+	background-color: #000000;
+	border: none;
+	outline: none;
+	padding-left: 20px;
+}
+.jobs-input-search-button {
+	outline: none;
+	border: none;
+	background-color: transparent;
+}
+.jobs-input-search-icon {
+	margin-right: 10px;
+}
+.jobs-items-list {
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+}
+.retry-button {
+	width: 90px;
+	background-color: #6366f1;
+	height: 30px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+}
+.no-jobs-image {
+	width: 60%;
+	height: 50%;
+	margin-top: 60px;
+}
+.failure-view-image {
+	width: 60%;
+	height: 50%;
+	margin-top: 60px;
+}
+.loader-container {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
